external/lib25519-20241004/build/arm64/nG/merged25519/arm64-maa4-redmul/shared/result-compile-ge25519_base
ge25519_base.S:1715:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
